[DEVELOP][STYLE] Add new image and correct z-index

--- a/Django/static/css/style.css
+++ b/Django/static/css/style.css
@@ -5,6 +5,8 @@
 html, #page { padding:0; margin:0;}
 body {
     background: #4878c4;
+    position: relative;
+    z-index: -1;
 }
 
 /* Custom container */
@@ -15,8 +17,9 @@ body {
     padding: 30px;
     max-width: 900px;
     position: relative;
-    z-index: -1;
+    z-index: -1;    
 }
+
 .container-narrow > hr {
     margin: 30px 0;
 }
@@ -79,6 +82,8 @@ p, div {
    background-color: transparent;
    background: rgba(0,0,0,0.4);
    border-color: transparent;
+   position: relative;
+   z-index: 1;
 }
 
 .navbar-brand {   padding: 0px; }
